updated site files

--- a/SaaSIntro | Bootstrap 5 SaaS Landing Page.html
+++ b/SaaSIntro | Bootstrap 5 SaaS Landing Page.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>SaaSIntro | Bootstrap 5 SaaS Landing Page</title>
+<title>Writerstube - All your softaware and research needs are our priority</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="https://preview.uideck.com/items/saasintro/assets/images/favicon.svg">
@@ -48,8 +48,9 @@
 <div class="row align-items-center">
 <div class="col-lg-12">
 <nav class="navbar navbar-expand-lg">
-<a class="navbar-brand" href="https://preview.uideck.com/items/saasintro/index.html">
-<img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/logo.svg" alt="Logo">
+<a class="navbar-brand" href="#">
+<h2 style="color: rgb(0, 109, 95);">Writerstube</h2>
+<!-- <img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/logo.svg" alt="Logo"> -->
 </a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="toggler-icon"></span>
@@ -66,20 +67,20 @@
 <a class="page-scroll" href="#about">About</a>
 </li>
 <li class="nav-item">
-<a class="page-scroll" href="#features">Features</a>
+<a class="page-scroll" href="#features">Services</a>
 </li>
 <li class="nav-item">
 <a class="page-scroll" href="#pricing">Pricing</a>
 </li>
-<li class="nav-item">
+<!-- <li class="nav-item">
 <a class="page-scroll" href="#team">Team</a>
-</li>
+</li> -->
 </ul>
 </div>
 </div>
 
 <div class="header-btn">
-<a href="#0" class="main-btn btn-hover">Download</a>
+<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Contact Us</a>
 </div>
 </nav>
 
@@ -98,16 +99,15 @@
 <div class="row align-items-center">
 <div class="col-xl-6 col-lg-6 col-md-10">
 <div class="hero-content">
-<h1>Validate Your <br class="d-none d-md-block"> SaaS Product Idea</h1>
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam 
-nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
-sed diam voluptua.</p>
-<a href="#0" class="main-btn btn-hover">Get Started</a>
+<h1>A professional <br class="d-none d-md-block"> App development and proffreading service</h1>
+<p>We deliver custom writern papers in all fields, Custom web app and documentation Services
+  within your budget. Contact us for more information</p>
+<a href="#0" class="main-btn btn-hover">Contact us</a>
 </div>
 </div>
 <div class="col-xxl-6 col-xl-6 col-lg-6">
 <div class="hero-image text-center text-lg-end">
-<img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/hero-image.svg" alt="">
+<img src="./Nova - Bootstrap 5 Template_files/about-img.svg" alt="">
 </div>
 </div>
 </div>
@@ -120,19 +120,17 @@ sed diam voluptua.</p>
 <div class="row">
 <div class="col-lg-6 order-last order-lg-first">
 <div class="about-image">
-<img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/about-image.svg" alt="">
+<img src="./Nova - Bootstrap 5 Template_files/hero-img.svg" alt="">
 </div>
 </div>
 <div class="col-lg-6">
 <div class="about-content-wrapper">
 <div class="section-title">
-<h2 class="mb-20">Perfect Solution Thriving Online Business</h2>
-<p class="mb-30">Lorem ipsum dolor sit amet, consetetur sadipscing 
-elitr, sed dinonumy eirmod tempor invidunt ut labore et dolore magna 
-aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo 
-dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus 
-est Lorem.Lorem ipsum dolor sit amet.</p>
-<a href="#0" class="main-btn btn-hover border-btn">Discover More</a>
+<h2 class="mb-20">Perfect Solution for all your software and writing needs</h2>
+<p class="mb-30">Our fleet of programmers and writers are experts in their fields.
+  We offer less price for state of art servises. Contct us to place an order.
+</p>
+<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover border-btn">Conatct Support</a>
 </div>
 </div>
 </div>
@@ -147,8 +145,7 @@ est Lorem.Lorem ipsum dolor sit amet.</p>
 <div class="col-lg-5 col-md-10">
 <div class="section-title mb-60">
 <h2 class="mb-20">Modern design with Essential Features</h2>
-<p>Lorem ipsum dolor amet, consetetur sadipscing elitr, sed diam nonumy eirmod te invidunt,
-Lorem ipsum dolor sit amet.</p>
+<p>We use modern technologies and frameworks to deliver our programming servises. Our writers are tested and proven proffesionals</p>
 </div>
 </div>
 <div class="col-lg-7">
@@ -159,8 +156,8 @@ Lorem ipsum dolor sit amet.</p>
 <i class="lni lni-display"></i>
 </div>
 <div class="feature-content">
-<h4>SaaS Focused</h4>
-<p>Lorem ipsum dolor amet, consetetur sadipscing elitr, diam nonu eirmod tem invidunt.</p>
+<h4>Modern app design</h4>
+<p>Our App and web apps standout and are easy to use by your users.</p>
 </div>
 </div>
 </div>
@@ -170,8 +167,8 @@ Lorem ipsum dolor sit amet.</p>
 <i class="lni lni-compass"></i>
 </div>
 <div class="feature-content">
-<h4>Awesome Design</h4>
-<p>Lorem ipsum dolor amet, consetetur sadipscing elitr, diam nonu eirmod tem invidunt.</p>
+<h4>High quality papers</h4>
+<p>We write custom papers according to your instructions and specifications.</p>
 </div>
 </div>
 </div>
@@ -181,8 +178,8 @@ Lorem ipsum dolor sit amet.</p>
 <i class="lni lni-grid-alt"></i>
 </div>
 <div class="feature-content">
-<h4>Ready to Use</h4>
-<p>Lorem ipsum dolor amet, consetetur sadipscing elitr, diam nonu eirmod tem invidunt.</p>
+<h4>Delivered within deadline</h4>
+<p>Our framework of work allow us to deliver highly urgent orders.</p>
 </div>
 </div>
 </div>
@@ -192,8 +189,8 @@ Lorem ipsum dolor sit amet.</p>
 <i class="lni lni-layers"></i>
 </div>
 <div class="feature-content">
-<h4>Essential Sections</h4>
-<p>Lorem ipsum dolor amet, consetetur sadipscing elitr, diam nonu eirmod tem invidunt.</p>
+<h4>Secure payments</h4>
+<p>We use mordern payment services ensuring secure funds transfer.</p>
 </div>
 </div>
 </div>
@@ -210,12 +207,12 @@ Lorem ipsum dolor sit amet.</p>
 <div class="col-lg-6 col-md-10">
 <div class="cta-content-wrapper">
 <div class="section-title">
-<h2 class="mb-20">Quick &amp; Easy to <br class="d-none d-lg-block"> Use Bootstrap Template</h2>
-<p class="mb-30">Lorem ipsum dolor sit amet, consetetur sadipscing 
-elitr, sed dinonumy eirmod tempor invidunt ut labore et dolore magna 
-aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo 
-dolores et ea rebum. Stet clita kasd gubergre.</p>
-<a href="#0" class="main-btn btn-hover border-btn">Try it Free</a>
+<h2 class="mb-20">Quick &amp; Easy to <br class="d-none d-lg-block"> get your order delivered</h2>
+<p class="mb-30">Once you conatct us we estimate the work needed to deliver your order.
+  Our always online support team will then reach to your to confirm your order status. it will take less than ten minutes 
+  to realieve the stress of a high pressing task.
+</p>
+<a href="#0" class="main-btn btn-hover border-btn">Just contact us!</a>
 </div>
 </div>
 </div>
@@ -234,8 +231,8 @@ dolores et ea rebum. Stet clita kasd gubergre.</p>
 <div class="row justify-content-center">
 <div class="col-lg-6 col-md-10">
 <div class="section-title text-center">
-<h2>Choose a Plan</h2>
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed dinonumy eirmod tempor invidunt ut labore et dolore magna.</p>
+<h2> Pricing Options</h2>
+<p>Below is a quick grasp of the starting prices of our main services.</p>
 </div>
 </div>
 </div>
@@ -243,35 +240,35 @@ dolores et ea rebum. Stet clita kasd gubergre.</p>
 <div class="col-lg-4 col-md-8 col-sm-10">
 <div class="single-pricing">
 <div class="pricing-header">
-<h5 class="package-name">Basic Account</h5>
-<h2 class="package-price"> $40 <span>Monthly</span></h2>
+<h5 class="package-name">Proofreading & documentation</h5>
+<h2 class="package-price"> <span>Starting at </span> $20 <span>a page</span></h2>
 </div>
 <div class="pricing-body">
 <ul>
 <li>
 <span class="bolet active"></span>
-<p>Unlimited Access</p>
+<p>Unlimited Orders</p>
 </li>
 <li>
 <span class="bolet active"></span>
-<p>20+ Users</p>
+<p>Up to 10% discounts</p>
 </li>
-<li>
+<!-- <li>
 <span class="bolet active"></span>
 <p>Unlimited Storage</p>
-</li>
+</li> -->
 <li>
-<span class="bolet"></span>
+<span class="bolet active"></span>
 <p>24/7 Support</p>
 </li>
 <li>
-<span class="bolet"></span>
-<p>Free Future Updates</p>
+<span class="bolet active"></span>
+<p>Custom prices*</p>
 </li>
 </ul>
 </div>
 <div class="pricing-footer">
-<a href="#0" class="main-btn btn-hover">Purchase Now</a>
+<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
 </div>
 </div>
 </div>
@@ -279,58 +276,58 @@ dolores et ea rebum. Stet clita kasd gubergre.</p>
 <div class="single-pricing standard">
 <span class="populer">Popular</span>
 <div class="pricing-header">
-<h5 class="package-name">Standard Account</h5>
-<h2 class="package-price"> $60 <span>Monthly</span></h2>
+<h5 class="package-name">Custom Research paper</h5>
+<h2 class="package-price"> $40 <span>per page</span></h2>
 </div>
 <div class="pricing-body">
 <ul>
 <li>
 <span class="bolet active"></span>
-<p>Unlimited Access</p>
+<p>Unlimited Orders</p>
 </li>
 <li>
 <span class="bolet active"></span>
-<p>20+ Users</p>
+<p>Up to 10% discounts</p>
 </li>
 <li>
 <span class="bolet active"></span>
-<p>Unlimited Storage</p>
+<p>Up to 3 Revisions</p>
 </li>
 <li>
 <span class="bolet active"></span>
 <p>24/7 Support</p>
 </li>
-<li>
+<!-- <li>
 <span class="bolet"></span>
-<p>Free Future Updates</p>
-</li>
+<p>Custom prices*</p>
+</li> -->
 </ul>
 </div>
 <div class="pricing-footer">
-<a href="#0" class="main-btn btn-hover">Purchase Now</a>
+<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
 </div>
 </div>
 </div>
 <div class="col-lg-4 col-md-8 col-sm-10">
 <div class="single-pricing">
 <div class="pricing-header">
-<h5 class="package-name">Premium Account</h5>
-<h2 class="package-price"> $80 <span>Monthly</span></h2>
+<h5 class="package-name">Software development & documentation</h5>
+<h2 class="package-price"> <span>Starting at </span> $400</h2>
 </div>
 <div class="pricing-body">
 <ul>
 <li>
 <span class="bolet active"></span>
-<p>Unlimited Access</p>
+<p>Unlimited Orders</p>
 </li>
 <li>
 <span class="bolet active"></span>
-<p>20+ Users</p>
+<p>Up to 10% discounts</p>
 </li>
-<li>
+<!-- <li>
 <span class="bolet active"></span>
 <p>Unlimited Storage</p>
-</li>
+</li> -->
 <li>
 <span class="bolet active"></span>
 <p>24/7 Support</p>
@@ -342,7 +339,7 @@ dolores et ea rebum. Stet clita kasd gubergre.</p>
 </ul>
 </div>
 <div class="pricing-footer">
-<a href="#0" class="main-btn btn-hover">Purchase Now</a>
+<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
 </div>
 </div>
 </div>
@@ -351,7 +348,7 @@ dolores et ea rebum. Stet clita kasd gubergre.</p>
 </section>
 
 
-<section id="team" class="team-section pt-100">
+<!-- <section id="team" class="team-section pt-100">
 <div class="container">
 <div class="row justify-content-center">
 <div class="col-lg-6 col-md-10">
@@ -397,10 +394,10 @@ dolores et ea rebum. Stet clita kasd gubergre.</p>
 </div>
 </div>
 </div>
-</section>
+</section> -->
 
 
-<section class="testimonial-section mt-100">
+<!-- <section class="testimonial-section mt-100">
 <div class="container">
 <div class="row justify-content-center">
 <div class="col-xl-7 col-lg-9">
@@ -488,7 +485,7 @@ sed diam voluptua.</p>
 <img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/testimonial-3.png" alt="" class="testimonial-image image-3">
 <img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/testimonial-4.png" alt="" class="testimonial-image image-4">
 </div>
-</section>
+</section> -->
 
 
 <footer class="footer pt-120">
@@ -497,9 +494,13 @@ sed diam voluptua.</p>
 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-10">
 <div class="footer-widget">
 <div class="logo">
-<a href="https://preview.uideck.com/items/saasintro/index.html"> <img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/logo.svg" alt="logo"> </a>
+  <h3>Writerstube</h3> <br>
+  <a href="mailto://1writerstube@gmail.com"> 
+  <h5>1writerstube@gmail.com</h5>
+  <!-- <img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/logo.svg" alt="logo"> -->
+ </a>
 </div>
-<p class="desc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed dinonumy eirmod tempor invidunt.</p>
+<p class="desc">A professional softaware development and custom writing solution.</p>
 <ul class="social-links">
 <li><a href="#0"><i class="lni lni-facebook"></i></a></li>
 <li><a href="#0"><i class="lni lni-linkedin"></i></a></li>
@@ -524,16 +525,16 @@ sed diam voluptua.</p>
 <div class="footer-widget">
 <h3>Services</h3>
 <ul class="links">
-<li><a href="#0">SaaS Focused</a></li>
-<li><a href="#0">Awesome Design</a></li>
-<li><a href="#0">Ready to Use</a></li>
-<li><a href="#0">Essential Selection</a></li>
+<li><a href="#0">Quality custom papers</a></li>
+<li><a href="#0">Awesome App Design</a></li>
+<li><a href="#0">Cheap and secure payments</a></li>
+<li><a href="#0">Modern software architecture</a></li>
 </ul>
 </div>
 </div>
 <div class="col-xl-3 col-lg-4 col-md-6">
 <div class="footer-widget">
-<h3>Subscribe Newsletter</h3>
+<h3>Subscribe to new offers</h3>
 <form action="#">
 <input type="email" placeholder="Email">
 <button class="main-btn btn-hover">Subscribe</button>
