added new pictures

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
 <div class="col-xl-6 col-lg-6 col-md-10">
 <div class="hero-content">
 <h1>A professional <br class="d-none d-md-block"> App development and proffreading service</h1>
-<p>We deliver custom writern papers in all fields, Custom web app and documentation Services
+<p>We deliver custom writtern papers in all fields, Custom web app and documentation Services
   within your budget. Contact us for more information</p>
 <a href="#0" class="main-btn btn-hover">Contact us</a>
 </div>
 </div>
 <div class="col-xxl-6 col-xl-6 col-lg-6">
 <div class="hero-image text-center text-lg-end">
-<img src="./Nova - Bootstrap 5 Template_files/about-img.svg" alt="">
+<img src="./Nova - Bootstrap 5 Template_files/hero-img.svg" alt="">
 </div>
 </div>
 </div>
@@ -120,17 +120,17 @@
 <div class="row">
 <div class="col-lg-6 order-last order-lg-first">
 <div class="about-image">
-<img src="./Nova - Bootstrap 5 Template_files/hero-img.svg" alt="">
+<img src="./Nova - Bootstrap 5 Template_files/about-img.svg" alt="">
 </div>
 </div>
 <div class="col-lg-6">
 <div class="about-content-wrapper">
 <div class="section-title">
-<h2 class="mb-20">Perfect Solution for all your software and writing needs</h2>
+<h2 class="mb-20">Perfect Solution for all your software and writting needs</h2>
 <p class="mb-30">Our fleet of programmers and writers are experts in their fields.
-  We offer less price for state of art servises. Contct us to place an order.
+  We offer less price for state of the art services. Contact us to place an order.
 </p>
-<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover border-btn">Conatct Support</a>
+<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover border-btn">Contact Support</a>
 </div>
 </div>
 </div>
@@ -145,7 +145,8 @@
 <div class="col-lg-5 col-md-10">
 <div class="section-title mb-60">
 <h2 class="mb-20">Modern design with Essential Features</h2>
-<p>We use modern technologies and frameworks to deliver our programming servises. Our writers are tested and proven proffesionals</p>
+<p>We use modern technologies and frameworks to deliver our programming servises. 
+  Our writers are tested and proven proffesionals in their field of study</p>
 </div>
 </div>
 <div class="col-lg-7">
@@ -157,7 +158,7 @@
 </div>
 <div class="feature-content">
 <h4>Modern app design</h4>
-<p>Our App and web apps standout and are easy to use by your users.</p>
+<p>Our App and web apps stand out and are easy to use by your users.</p>
 </div>
 </div>
 </div>
