added new pictures

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </div>
 
 <div class="header-btn">
-<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Contact Us</a>
+<a href="mailto:1writerstube@gmail.com" class="main-btn btn-hover">Contact Us</a>
 </div>
 </nav>
 
@@ -100,7 +100,7 @@
 <div class="col-xl-6 col-lg-6 col-md-10">
 <div class="hero-content">
 <h1>A professional <br class="d-none d-md-block"> App development and proffreading service</h1>
-<p>We deliver custom writtern papers in all fields, Custom web app and documentation Services
+<p>We deliver custom written papers in all fields, Custom web apps and documentation Services
   within your budget. Contact us for more information</p>
 <a href="#0" class="main-btn btn-hover">Contact us</a>
 </div>
@@ -130,7 +130,7 @@
 <p class="mb-30">Our fleet of programmers and writers are experts in their fields.
   We offer less price for state of the art services. Contact us to place an order.
 </p>
-<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover border-btn">Contact Support</a>
+<a href="mailto:1writerstube@gmail.com" class="main-btn btn-hover border-btn">Contact Support</a>
 </div>
 </div>
 </div>
@@ -269,7 +269,7 @@
 </ul>
 </div>
 <div class="pricing-footer">
-<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
+<a href="mailto:1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
 </div>
 </div>
 </div>
@@ -305,7 +305,7 @@
 </ul>
 </div>
 <div class="pricing-footer">
-<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
+<a href="mailto:1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
 </div>
 </div>
 </div>
@@ -340,7 +340,7 @@
 </ul>
 </div>
 <div class="pricing-footer">
-<a href="mailto://1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
+<a href="mailto:1writerstube@gmail.com" class="main-btn btn-hover">Order Now</a>
 </div>
 </div>
 </div>
@@ -496,7 +496,7 @@ sed diam voluptua.</p>
 <div class="footer-widget">
 <div class="logo">
   <h3>Writerstube</h3> <br>
-  <a href="mailto://1writerstube@gmail.com"> 
+  <a href="mailto:1writerstube@gmail.com"> 
   <h5>1writerstube@gmail.com</h5>
   <!-- <img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/logo.svg" alt="logo"> -->
  </a>
@@ -527,7 +527,7 @@ sed diam voluptua.</p>
 <h3>Services</h3>
 <ul class="links">
 <li><a href="#0">Quality custom papers</a></li>
-<li><a href="#0">Awesome App Design</a></li>
+<li><a href="#0">Modern App Design</a></li>
 <li><a href="#0">Cheap and secure payments</a></li>
 <li><a href="#0">Modern software architecture</a></li>
 </ul>
@@ -535,7 +535,7 @@ sed diam voluptua.</p>
 </div>
 <div class="col-xl-3 col-lg-4 col-md-6">
 <div class="footer-widget">
-<h3>Subscribe to new offers</h3>
+<h3>Subscribe for new offers</h3>
 <form action="#">
 <input type="email" placeholder="Email">
 <button class="main-btn btn-hover">Subscribe</button>
