added new pictures

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Writerstube - All your softaware and research needs are our priority</title>
+<title>Writerstube - All your softaware and research paper needs are catered for</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="https://preview.uideck.com/items/saasintro/assets/images/favicon.svg">
@@ -102,7 +102,7 @@
 <h1>A professional <br class="d-none d-md-block"> App development and proffreading service</h1>
 <p>We deliver custom written papers in all fields, Custom web apps and documentation Services
   within your budget. Contact us for more information</p>
-<a href="#0" class="main-btn btn-hover">Contact us</a>
+<a href="mailto:1writerstube@gmail.com" class="main-btn btn-hover">Contact us</a>
 </div>
 </div>
 <div class="col-xxl-6 col-xl-6 col-lg-6">
@@ -126,7 +126,7 @@
 <div class="col-lg-6">
 <div class="about-content-wrapper">
 <div class="section-title">
-<h2 class="mb-20">Perfect Solution for all your software and writting needs</h2>
+<h2 class="mb-20">Perfect Solution for all your software and writing needs</h2>
 <p class="mb-30">Our fleet of programmers and writers are experts in their fields.
   We offer less price for state of the art services. Contact us to place an order.
 </p>
@@ -208,8 +208,8 @@
 <div class="col-lg-6 col-md-10">
 <div class="cta-content-wrapper">
 <div class="section-title">
-<h2 class="mb-20">Quick &amp; Easy to <br class="d-none d-lg-block"> get your order delivered</h2>
-<p class="mb-30">Once you conatct us we estimate the work needed to deliver your order.
+<h2 class="mb-20">Quick &amp; Easy to <br class="d-none d-lg-block"> get your task done</h2>
+<p class="mb-30">Once you contact us we estimate the work needed to deliver your order.
   Our always online support team will then reach to your to confirm your order status. it will take less than ten minutes 
   to realieve the stress of a high pressing task.
 </p>
@@ -496,6 +496,8 @@ sed diam voluptua.</p>
 <div class="footer-widget">
 <div class="logo">
   <h3>Writerstube</h3> <br>
+  <p>&copy; 2016 -2021 writerstube</p>
+   <br>
   <a href="mailto:1writerstube@gmail.com"> 
   <h5>1writerstube@gmail.com</h5>
   <!-- <img src="SaaSIntro%20|%20Bootstrap%205%20SaaS%20Landing%20Page_files/logo.svg" alt="logo"> -->
