--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <div class="col-lg-5 col-md-10">
 <div class="section-title mb-60">
 <h2 class="mb-20">Modern design with Essential Features</h2>
-<p>We use modern technologies and frameworks to deliver our programming servises. 
+<p>We use modern technologies and frameworks to deliver our programming services. 
   Our writers are tested and proven proffesionals in their field of study</p>
 </div>
 </div>
